PathFinding using Path Class. About to test.